# Project:   hyperi-pylib
# File:      examples/kafka-producer-consumer/pyproject.toml
# Purpose:   Example project demonstrating hyperi-pylib Kafka client
# Language:  Python
#
# License:   BUSL-1.1
# Copyright: (c) 2026 HYPERI PTY LIMITED

[project]
name = "kafka-producer-consumer-example"
version = "0.1.0"
description = "Example demonstrating hyperi-pylib Kafka producer and consumer"
requires-python = ">=3.12"
dependencies = [
    "hyperi-pylib>=2.14.0",
    "confluent-kafka>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
