# Project:   hyperi-pylib
# File:      examples/postgres-cache/pyproject.toml
# Purpose:   Example project demonstrating hyperi-pylib PostgreSQL cache
# Language:  Python
#
# License:   FSL-1.1-ALv2
# Copyright: (c) 2026 HYPERI PTY LIMITED

[project]
name = "postgres-cache-example"
version = "0.1.0"
description = "Example demonstrating hyperi-pylib PostgreSQL cache for multi-pod deployments"
requires-python = ">=3.12"
dependencies = [
    "hyperi-pylib[cache]>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
